docs: get subscriptions/:id handler
